...
                app:layout_constraintBottom_toBottomOf="@+id/dataTV"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/evoluzioneTempoTV"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/home_previsione_text"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
...
